--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,8 +144,14 @@ jobs:
               run: echo "$(jq ".containerDefinitions[0].image=\"mkellock/cosc2650@${{ needs.build_api.outputs.digest }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
             - name: Update ECS New Relic licence key
               run: echo "$(jq ".containerDefinitions[0].environment[0].value=\"${{ secrets.NEW_RELIC_LICENCE_KEY }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+            - name: Update ECS New Relic account id
+              run: echo "$(jq ".containerDefinitions[0].environment[1].value=\"${{ secrets.NEW_RELIC_ACCOUNT_ID }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+            - name: Update ECS New Relic api key
+              run: echo "$(jq ".containerDefinitions[0].environment[2].value=\"${{ secrets.NEW_RELIC_API_KEY }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
             - name: Update CORS URLs
-              run: echo "$(jq ".containerDefinitions[0].environment[1].value=\"${{ secrets.CORS_URLS }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+              run: echo "$(jq ".containerDefinitions[0].environment[3].value=\"${{ secrets.CORS_URLS }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
+            - name: Update connection string
+              run: echo "$(jq ".containerDefinitions[0].environment[4].value=\"${{ secrets.CONNECTION_STRING }}\"" ./IaC/ECS/task-definition.json)" > ./IaC/ECS/task-definition.json
             - name: Deploy Amazon ECS task definition
               uses: aws-actions/amazon-ecs-deploy-task-definition@v1
               with:
