--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -16,9 +16,10 @@
     "@types/node": "16.10.2",
     "@types/react": "17.0.27",
     "@types/react-dom": "17.0.9",
+    "apollo-client": "^2.6.10",
     "eslint-config-react-app": "6.0.0",
     "framer-motion": "4.1.17",
-    "graphql": "15.6.0",
+    "graphql": "^15.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
