--- a/API/API/API.csproj
+++ b/API/API/API.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="NewRelic.LogEnrichers.NLog" Version="1.2.1" />
+    <PackageReference Include="System.Security.Cryptography.Primitives" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
