--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -18,10 +18,11 @@
         "eslint-config-react-app": "6.0.0",
         "framer-motion": "4.1.17",
         "graphql": "15.6.1",
+        "graphql-faker": "^2.0.0-rc.25",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "4.3.1",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^4.0.3",
         "typescript": "4.4.4",
         "web-vitals": "2.1.2"
     },
