--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -16,6 +16,7 @@
         "@types/react": "17.0.34",
         "@types/react-dom": "17.0.11",
         "eslint-config-react-app": "6.0.0",
+        "framer-motion": "^5.2.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "4.3.1",
