--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -17,6 +17,7 @@
         "@types/react-dom": "17.0.11",
         "eslint-config-react-app": "6.0.0",
         "framer-motion": "^5.2.1",
+        "graphql": "^15.7.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "4.3.1",
