--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -16,12 +16,12 @@
         "@types/react": "17.0.34",
         "@types/react-dom": "17.0.11",
         "eslint-config-react-app": "6.0.0",
-        "framer-motion": "^5.2.1",
+        "framer-motion": "^4.1.17",
         "graphql": "^15.7.2",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-icons": "4.3.1",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "4.0.3",
         "typescript": "4.4.4",
         "web-vitals": "2.1.2"
     },
