--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,10 @@ jobs:
         outputs:
             result: ${{ job.status }}
         steps:
+            - name: Set up .Net framework
+              uses: actions/setup-dotnet@v1
+              with:
+                dotnet-version: '6.0.x'
             - name: Set up JDK 11
               uses: actions/setup-java@v1
               with:
