--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,14 @@ jobs:
         outputs:
             result: ${{ job.status }}
         steps:
-            - name: Set up .Net framework
+            - name: Set up .Net framework 5.x
               uses: actions/setup-dotnet@v1
               with:
-                dotnet-version: '6.0.x'
+                  dotnet-version: "5.x.x"
+            - name: Set up .Net framework 6.x
+              uses: actions/setup-dotnet@v1
+              with:
+                  dotnet-version: "6.x.x"
             - name: Set up JDK 11
               uses: actions/setup-java@v1
               with:
