--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -9,7 +9,6 @@
         "@chakra-ui/react": "1.6.12",
         "@emotion/react": "11.5.0",
         "@emotion/styled": "11.3.0",
-        "@types/jest": "27.0.2",
         "@types/node": "16.11.7",
         "@types/react": "17.0.34",
         "@types/react-dom": "17.0.11",
@@ -46,11 +45,14 @@
         ]
     },
     "devDependencies": {
+        "@jest/globals": "27.3.1",
+        "@testing-library/react": "12.1.2",
+        "@types/jest": "27.0.2",
         "@wojtekmaj/enzyme-adapter-react-17": "0.6.5",
         "enzyme": "3.11.0",
-        "react-scripts": "^4.0.3",
+        "eslint": "^7.32.0",
         "eslint-config-react-app": "6.0.0",
-        "@jest/globals": "27.3.1",
-        "@testing-library/react": "12.1.2"
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "react-scripts": "^4.0.3"
     }
 }
