--- a/UI/zip-it/package.json
+++ b/UI/zip-it/package.json
@@ -24,6 +24,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "coverage": "npm run test -- --coverage",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
